--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.16.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
