--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,14 @@ DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=pub
 RESEND_API_KEY="resendapikey"
 
 AUTH_SECRET="somethingreallysecret"
+
+GITHUB_CLIENT_ID="githubclientid"
+GITHUB_CLIENT_SECRET="githubclientsecret"
+
+GOOGLE_CLIENT_ID="googleclientid"
+GOOGLE_CLIENT_SECRET="googleclientsecret"
+
+BASE_URL="http://localhost:12345"
+
+ALGOLIA_APP_ID="algoliaappid"
+ALGOLIA_API_KEY="algoliapikey"
