--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@auth/prisma-adapter": "^2.4.1",
     "@hookform/resolvers": "^3.7.0",
     "@prisma/client": "^5.16.1",
+    "algoliasearch": "^5.2.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
     "next": "14.2.4",
@@ -23,8 +25,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-instantsearch": "^7.13.0",
     "resend": "^3.4.0",
     "sharp": "^0.33.4",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
